ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2012-08-18 Juan Gonzalez <juan.gonzalez@bsc.es>
	* The insertion method in the bursts database now is managed as a 
	transaction, divided in three operations, BeginInserts+NewBurst+
	CommitInserts.

	* Added the Perl script 'sl_expand_nodelist.pl' required in Sierra (not
	sure if it is required in other systems)

	* BackEnds end corruption still occurs.

2012-08-16 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Minor changes in the 'SystemMessages' class to improve the 
	TreeDBSCAN outputs

	* The tree implementation still has a memory leak difficult to 
	detect (a double free at the end of the BackEnds)

2012-08-14 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added a DB functionality using SQLite to avoid the memory bound on
	the MRNet tree based implementation: the master backend stores the
	whole collection of points in a file database, so as not to occupy
	all the memory avaible. The database management is encapsulated
	in the 'BurstsDB' class (BurstsDB.hpp|cpp). The availability check
	for an installation SQLite in the target system has been added
	to the building system

	* The addition of this database implied a major modification in
	almost all the classes that used the 'CompleteBursts' vector. Now
	this classes can iterate through a STL vector, but the inner 
	iteration is done by a template based member function. This is the
	only solution to both iterate through the database or an STL
	container

	* All the TreeDBSCAN source code by German Llort now uses the
	'system_messages' interface. It has been extended to add a prefix
	before the rank ID, to ease the legibility of the information
	when running the distributed version

	* Better support to CGAL in the building system
