@@ -57,6 +57,9 @@ bool system_messages::print_timers            = false;
 bool system_messages::percentage_ongoing      = false;
 int  system_messages::last_percentage_written = 0;
 
+bool system_messages::progress_ongoing        = false;
+
+
 void system_messages::set_rank_prefix(const char* desired_rank_prefix)
 {
   ostringstream prefix;
@@ -121,10 +124,53 @@ void system_messages::show_progress(const char* message,
                                     int         total,
                                     FILE*       channel)
 {
-  if (system_messages::verbose && !system_messages::distributed)
+  if (system_messages::verbose)
   {
+    if (!system_messages::distributed)
+    {
       fprintf(channel, "\r%s %d/%d", message, current, total);
       fflush(channel);
+    }
+    else
+    {
+      int current_percentage, real_percentage;
+
+      current_percentage = (100*current)/total;
+
+      if (current_percentage < 0)
+        real_percentage = 0;
+      else if (current_percentage > 100)
+        real_percentage = 100;
+      else
+       real_percentage = current_percentage;
+
+      if (system_messages::messages_from_all_ranks ||
+         (!system_messages::messages_from_all_ranks && system_messages::my_rank == 0))
+      {
+        if(!system_messages::progress_ongoing)
+        {
+          fprintf(channel,
+                  "[%s%d] %s %03d%%",
+                  system_messages::rank_prefix,
+                  system_messages::my_rank,
+                  message,
+                  real_percentage);
+          fflush(channel);
+          system_messages::progress_ongoing        = true;
+          system_messages::last_percentage_written = 0;
+        }
+        else
+        {
+          if (real_percentage % 10 == 0 && real_percentage != 100 &&
+              real_percentage > system_messages::last_percentage_written)
+          {
+            fprintf(channel, " %03d%%", real_percentage);
+            fflush(channel);
+            system_messages::last_percentage_written = real_percentage;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -141,10 +187,24 @@ void system_messages::show_progress_end(const char* message,
                                         int         total,
                                         FILE*       channel)
 {
-  if (system_messages::verbose && !system_messages::distributed)
+  if (system_messages::verbose)
   {
-    fprintf(channel, "\r%s %d/%d\n", message, total, total);
-    fflush(channel);
+    if (!system_messages::distributed)
+    {
+      fprintf(channel, "\r%s %d/%d\n", message, total, total);
+      fflush(channel);
+    }
+    else
+    {
+      if (system_messages::messages_from_all_ranks ||
+            (!system_messages::messages_from_all_ranks && system_messages::my_rank == 0))
+      {
+        fprintf(channel, " 100%%\n", system_messages::my_rank);
+        system_messages::progress_ongoing = false;
+      }
+
+      fflush(channel);
+    }
   }
 }
 
@@ -191,14 +251,17 @@ void system_messages::show_percentage_progress(const char* message,
                   message,
                   real_percentage);
           fflush(channel);
-          system_messages::percentage_ongoing = true;
+          system_messages::percentage_ongoing      = true;
+          system_messages::last_percentage_written = 0;
         }
         else
         {
-          if (real_percentage % 10 == 0 && real_percentage != 100 )
+          if (real_percentage % 10 == 0 && real_percentage != 100 &&
+              real_percentage > system_messages::last_percentage_written)
           {
             fprintf(channel, " %03d%%", real_percentage);
             fflush(channel);
+            system_messages::last_percentage_written = real_percentage;
           }
         }
       }
