@@ -8,7 +8,7 @@ EXPAND_NODELIST = sl_expand_nodelist.pl
 
 EXTRA_DIST = $(SOURCEME_SH) $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST)
 
-bin_SCRIPTS    = $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS)
+bin_SCRIPTS    = $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST)
 noinst_SCRIPTS = $(SOURCEME_SH)
 
 install-data-hook:
